@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.5)
 
 set(PROJECT_VERSION_MAJOR 1)
-set(PROJECT_VERSION_MINOR 15)
-set(PROJECT_VERSION_PATCH 1)
+set(PROJECT_VERSION_MINOR 16)
+set(PROJECT_VERSION_PATCH 0)
 
 project(BrainAmpSeries
 	LANGUAGES CXX
