@@ -1,3 +1,7 @@
+BrainAmpSeries Connector v.1.16.0
+-feature: MR settings check box
+-feature: check settings against amplifier type to ensure compatiblity
+
 BrainAmpSeries Connector v.1.15.1
 -bugfix: replaced antialiasing filter coefficients with correct values
 
